tests/fail_syntax/literal_none.rs
fn main() {
    sscanf::scanf!("5");
}
